<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/torchBtn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/playBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_color"
                android:padding="15dp"
                android:hapticFeedbackEnabled="true"
                android:contentDescription="@string/turn_on_and_off_light"
                android:src="@drawable/ic_play"
                app:layout_constraintBottom_toTopOf="@id/lightSlider"
                app:layout_constraintEnd_toStartOf="@id/phoneBtn"
                app:layout_constraintStart_toEndOf="@id/sosBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/sosBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sos_background"
                android:padding="15dp"
                android:layout_marginStart="10dp"
                android:hapticFeedbackEnabled="true"
                android:contentDescription="@string/sos"
                android:src="@drawable/ic_sos_off"
                app:layout_constraintBottom_toBottomOf="@id/playBtn"
                app:layout_constraintEnd_toStartOf="@id/playBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/playBtn" />

            <ImageButton
                android:id="@+id/phoneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/phone_background"
                android:padding="15dp"
                android:hapticFeedbackEnabled="true"
                android:contentDescription = "@string/incoming_call"
                android:src="@drawable/ic_call_off"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/playBtn"
                app:layout_constraintTop_toTopOf="@id/playBtn"
                app:layout_constraintBottom_toBottomOf="@id/playBtn"
                />

            <TextView
                android:id="@+id/blinking_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blinking_speed"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintTop_toBottomOf="@id/lightSlider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/lightSlider"
                app:layout_constraintEnd_toEndOf="@id/lightSlider"
                />

            <com.google.android.material.slider.Slider
                android:id="@+id/lightSlider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/slider_background"
                android:stepSize="10.0"
                android:valueFrom="0.0"
                android:valueTo="90.0"
                android:contentDescription="@string/light_blinking_speed"
                app:labelBehavior="floating"
                app:layout_constraintTop_toBottomOf="@id/playBtn"
                app:layout_constraintBottom_toTopOf="@id/blinking_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:thumbColor="@color/yellow"
                app:trackColor="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/torchBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        android:padding="20dp"
        android:src="@drawable/light_bulb_off"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/flash_light" />

</androidx.constraintlayout.widget.ConstraintLayout>
